--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
     <div id="label22">
-    <div class="label2">Enter a date to view its historical exchange rate</div>
+    <div class="label2">Enter a date to view the historical exchange rates</div>
 
     <select name="year" id="year">
         </select>
